--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
    <color name="secondText">#757575</color>
    <color name="backgroundCenter">#DC101010</color>
    <color name="backgroundBack">#F6000000</color>
-   <color name="buttonImageSave">#81C784</color>
+   <color name="buttonImageSave">#92BC94</color>
    <color name="buttonEditNewImage">#ffb74d</color>
    <color name="white">#ffffff</color>
 </resources>
