--- a/app/src/main/res/layout/activity_edit_image.xml
+++ b/app/src/main/res/layout/activity_edit_image.xml
@@ -22,7 +22,8 @@
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:src="@drawable/ic_back"
-            android:tint="@color/white"/>
+            android:tint="@color/white" />
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -30,36 +31,42 @@
             android:layout_marginEnd="10dp"
             android:layout_weight="1"
             android:includeFontPadding="false"
-            android:textColor="@color/white"
             android:text="Apply Filter"
-            android:textSize="14sp"
-            />
+            android:textColor="@color/white"
+            android:textSize="14sp" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/imageSave"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:src="@drawable/ic_done"
-            android:tint="@color/white"
-            />
+            android:tint="@color/white" />
     </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/imagePreview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/imagePreview"
         android:scaleType="centerCrop"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/filtersRecyclerView"
-        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
-        />
+        app:layout_constraintTop_toBottomOf="@id/layoutHeader" />
+
+    <ProgressBar
+        android:id="@+id/previewProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@id/imagePreview"
+        app:layout_constraintEnd_toEndOf="@id/imagePreview"
+        app:layout_constraintStart_toStartOf="@id/imagePreview"
+        app:layout_constraintTop_toTopOf="@id/imagePreview" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/filtersRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="105dp"
-        android:id="@+id/filtersRecyclerView"
-        android:orientation="horizontal"
         android:clipToPadding="false"
+        android:orientation="horizontal"
         android:paddingStart="0dp"
         android:paddingLeft="0dp"
         android:paddingTop="10dp"
@@ -67,6 +74,5 @@
         android:paddingBottom="8dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:listitem="@layout/item_contaiter_filter"
-                />
+        tools:listitem="@layout/item_contaiter_filter" />
 </androidx.constraintlayout.widget.ConstraintLayout>
