--- a/app/src/main/res/layout/activity_edit_image.xml
+++ b/app/src/main/res/layout/activity_edit_image.xml
@@ -75,4 +75,16 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:listitem="@layout/item_contaiter_filter" />
+
+
+    <ProgressBar
+        android:id="@+id/imageFiltersProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/filtersRecyclerView"
+        app:layout_constraintEnd_toEndOf="@id/filtersRecyclerView"
+        app:layout_constraintStart_toStartOf="@id/filtersRecyclerView"
+        app:layout_constraintTop_toTopOf="@id/filtersRecyclerView"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
