--- a/app/src/main/res/layout/activity_edit_image.xml
+++ b/app/src/main/res/layout/activity_edit_image.xml
@@ -35,12 +35,25 @@
             android:textColor="@color/white"
             android:textSize="14sp" />
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/imageSave"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:src="@drawable/ic_done"
-            android:tint="@color/white" />
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/imageSave"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/ic_done"
+                android:tint="@color/white" />
+
+            <ProgressBar
+                android:id="@+id/savingProgressBar"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:visibility="gone"/>
+        </FrameLayout>
+
+
     </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -85,6 +98,5 @@
         app:layout_constraintBottom_toBottomOf="@id/filtersRecyclerView"
         app:layout_constraintEnd_toEndOf="@id/filtersRecyclerView"
         app:layout_constraintStart_toStartOf="@id/filtersRecyclerView"
-        app:layout_constraintTop_toTopOf="@id/filtersRecyclerView"
-        />
+        app:layout_constraintTop_toTopOf="@id/filtersRecyclerView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
