--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
    <color name="buttonImageSave">#92BC94</color>
    <color name="buttonEditNewImage">#ffb74d</color>
    <color name="white">#ffffff</color>
+    <color name="color_black">#000000</color>
 </resources>
