--- a/app/src/main/res/layout/item_container_saved_image.xml
+++ b/app/src/main/res/layout/item_container_saved_image.xml
@@ -6,6 +6,5 @@
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:adjustViewBounds="true"
-    app:riv_corner_radius="8dp">
+    app:riv_corner_radius="8dp"/>
 
-</com.makeramen.roundedimageview.RoundedImageView>
